--- a/index.html
+++ b/index.html
@@ -24,21 +24,45 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    Join our community 30-day, hassle-free money back guarantee Gain access to
-    our full library of tutorials along with expert code reviews. Perfect for
-    any developers who are serious about honing their skills. Monthly
-    Subscription &dollar;29 per month Full access for less than &dollar;1 a day
-    Sign Up Why Us Tutorials by industry experts Peer &amp; expert code review
-    Coding exercises Access to our GitHub repos Community forum Flashcard decks
-    New videos every week
+    <main>
+      <div class="component-container">
+        <div class="card">
+          <h1 class="header-join">Join our community</h1>
+          <h2>30-day, hassle-free money back guarantee</h2>
+          <p>
+            Gain access to our full library of tutorials along with expert code
+            reviews. Perfect for any developers who are serious about honing
+            their skills.
+          </p>
+        </div>
+        <div class="card">
+          <h2>Monthly Subscription</h2>
+          <p><span> &dollar;29</span> per month</p>
+          <p>Full access for less than &dollar;1 a day</p>
+          <button>Sign Up</button>
+        </div>
+        <div class="card">
+          <h2>Why Us</h2>
+          <ul>
+            <li>Tutorials by industry experts</li>
+            <li>Peer &amp; expert code review</li>
+            <li>Coding exercises</li>
+            <li>Access to our GitHub repos</li>
+            <li>Community forum</li>
+            <li>Flashcard decks</li>
+            <li>New videos every week</li>
+          </ul>
+        </div>
+      </div>
+    </main>
 
-    <footer>
+    <!-- <footer>
       <p class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="#">Amy Spencer</a>.
       </p>
-    </footer>
+    </footer> -->
   </body>
 </html>
