Worked out background colors and boxshadowing for button and entire component.

--- a/index.html
+++ b/index.html
@@ -26,32 +26,43 @@
   <body>
     <main>
       <div class="component-container">
-        <div class="card">
-          <h1 class="header-join">Join our community</h1>
-          <h2>30-day, hassle-free money back guarantee</h2>
-          <p>
-            Gain access to our full library of tutorials along with expert code
-            reviews. Perfect for any developers who are serious about honing
-            their skills.
-          </p>
+        <div class="card join">
+          <div class="card-info-wrapper">
+            <h1 class="header-join">Join our community</h1>
+            <h2 class="header-30-day">
+              30-day, hassle-free money back guarantee
+            </h2>
+            <p class="text-join">
+              Gain access to our full library of tutorials along with expert
+              code reviews. Perfect for any developers who are serious about
+              honing their skills.
+            </p>
+          </div>
         </div>
-        <div class="card">
-          <h2>Monthly Subscription</h2>
-          <p><span> &dollar;29</span> per month</p>
-          <p>Full access for less than &dollar;1 a day</p>
-          <button>Sign Up</button>
+        <div class="card subscribe">
+          <div class="card-info-wrapper">
+            <h2 class="header-subscribe">Monthly Subscription</h2>
+            <p class="text-subscribe">
+              <span class="bold"> &dollar;29</span> per month
+            </p>
+            <p>Full access for less than &dollar;1 a day</p>
+            <button class="btn-sign-up">Sign Up</button>
+          </div>
+          <!-- <button class="btn-sign-up">Sign Up</button> -->
         </div>
-        <div class="card">
-          <h2>Why Us</h2>
-          <ul>
-            <li>Tutorials by industry experts</li>
-            <li>Peer &amp; expert code review</li>
-            <li>Coding exercises</li>
-            <li>Access to our GitHub repos</li>
-            <li>Community forum</li>
-            <li>Flashcard decks</li>
-            <li>New videos every week</li>
-          </ul>
+        <div class="card why">
+          <div class="card-info-wrapper">
+            <h2 class="header-why">Why Us</h2>
+            <ul class="list-why">
+              <li>Tutorials by industry experts</li>
+              <li>Peer &amp; expert code review</li>
+              <li>Coding exercises</li>
+              <li>Access to our GitHub repos</li>
+              <li>Community forum</li>
+              <li>Flashcard decks</li>
+              <li>New videos every week</li>
+            </ul>
+          </div>
         </div>
       </div>
     </main>
